@@ -1,3 +1,9 @@
+Fri Dec 18 19:20:45 PST 1998 Manish Singh <yosh@gimp.org>
+
+	* gtkbutton.[ch]
+	* gtktogglebutton.c: s/(enter|leave)_button/$1/g, since pthreads.h
+	no longer conflicts
+	
 Sat Dec 19 01:56:13 1998  Lars Hamann  <lars@gtk.org>
 
 	* gtk/gtkclist.c (gtk_clist_button_press): fixed GDK_2BUTTON_PRESS
